[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/camera/CameraOperator.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.58455, 0, 0, Vector2( 0.742972, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0334996, 0.0, 0, 0 ]

[node name="CameraOperator" type="Node3D"]
script = ExtResource( 1 )
camera_offset = Vector3( 0, 0.5, 0 )
walk_speed = 30
max_distance = 60
zoom_curve = SubResource( 1 )

[node name="HorizontalGimbal" type="Node3D" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
script = null

[node name="Tween" type="Tween" parent="HorizontalGimbal"]
script = null

[node name="VerticalGimbal" type="Node3D" parent="HorizontalGimbal"]
script = null

[node name="Camera" type="Camera3D" parent="HorizontalGimbal/VerticalGimbal"]
current = true
size = 10.0
far = 1000.0
script = null
